status updates for plone packages

--- a/etc/plone-projects.cfg
+++ b/etc/plone-projects.cfg
@@ -28,7 +28,7 @@ rules = %(here)s/plone-rules/archetypes.referencebrowserwidget.cfg
 svn-repo = archetypes
 svn-path = /MoreFieldsAndWidgets/archetypes.referencebrowserwidget
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:archetypes.schemaextender]
 rules = %(here)s/plone-rules/archetypes.schemaextender.cfg
@@ -92,49 +92,49 @@ rules = %(here)s/plone-rules/borg.localrole.cfg
 svn-repo = collective
 svn-path = /borg/components/borg.localrole
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:collective.monkeypatcher]
 rules = %(here)s/plone-rules/collective.monkeypatcher.cfg
 svn-repo = collective
 svn-path = /collective.monkeypatcher
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.recipe.alltests]
 rules = %(here)s/plone-rules/plone.recipe.alltests.cfg
 svn-repo = collective
 svn-path = /buildout/plone.recipe.alltests
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.recipe.zeoserver]
 rules = %(here)s/plone-rules/plone.recipe.zeoserver.cfg
 svn-repo = collective
 svn-path = /buildout/plone.recipe.zeoserver
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.recipe.zope2instance]
 rules = %(here)s/plone-rules/plone.recipe.zope2instance.cfg
 svn-repo = collective
 svn-path = /buildout/plone.recipe.zope2instance
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.recipe.zope2install]
 rules = %(here)s/plone-rules/plone.recipe.zope2install.cfg
 svn-repo = collective
 svn-path = /buildout/plone.recipe.zope2install
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.recipe.zope2zeoserver]
 rules = %(here)s/plone-rules/plone.recipe.zope2zeoserver.cfg
 svn-repo = collective
 svn-path = /buildout/plone.recipe.zope2zeoserver
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:Products.ATContentTypes]
 rules = %(here)s/plone-rules/Products.ATContentTypes.cfg
@@ -218,7 +218,7 @@ rules = %(here)s/plone-rules/Products.PasswordResetTool.cfg
 svn-repo = collective
 svn-path = /Products.PasswordResetTool
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:Products.PlacelessTranslationService]
 rules = %(here)s/plone-rules/Products.PlacelessTranslationService.cfg
@@ -239,7 +239,7 @@ rules = %(here)s/plone-rules/Products.PlonePAS.cfg
 svn-repo = collective
 svn-path = /Products.PlonePAS
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:Products.PloneTestCase]
 rules = %(here)s/plone-rules/Products.PloneTestCase.cfg
@@ -335,14 +335,14 @@ rules = %(here)s/plone-rules/plone.app.content.cfg
 svn-repo = plone
 svn-path = /plone.app.content
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.contentmenu]
 rules = %(here)s/plone-rules/plone.app.contentmenu.cfg
 svn-repo = plone
 svn-path = /plone.app.contentmenu
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.contentrules]
 rules = %(here)s/plone-rules/plone.app.contentrules.cfg
@@ -377,42 +377,42 @@ rules = %(here)s/plone-rules/plone.app.folder.cfg
 svn-repo = plone
 svn-path = /plone.app.folder
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.form]
 rules = %(here)s/plone-rules/plone.app.form.cfg
 svn-repo = plone
 svn-path = /plone.app.form
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.i18n]
 rules = %(here)s/plone-rules/plone.app.i18n.cfg
 svn-repo = plone
 svn-path = /plone.app.i18n
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.imaging]
 rules = %(here)s/plone-rules/plone.app.imaging.cfg
 svn-repo = plone
 svn-path = /plone.app.imaging
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.iterate]
 rules = %(here)s/plone-rules/plone.app.iterate.cfg
 svn-repo = plone
 svn-path = /plone.app.iterate
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.jquerytools]
 rules = %(here)s/plone-rules/plone.app.jquerytools.cfg
 svn-repo = plone
 svn-path = /plone.app.jquerytools
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.kss]
 rules = %(here)s/plone-rules/plone.app.kss.cfg
@@ -433,14 +433,14 @@ rules = %(here)s/plone-rules/plone.app.linkintegrity.cfg
 svn-repo = plone
 svn-path = /plone.app.linkintegrity
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.openid]
 rules = %(here)s/plone-rules/plone.app.openid.cfg
 svn-repo = plone
 svn-path = /plone.app.openid
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.portlets]
 rules = %(here)s/plone-rules/plone.app.portlets.cfg
@@ -454,21 +454,21 @@ rules = %(here)s/plone-rules/plone.app.redirector.cfg
 svn-repo = plone
 svn-path = /plone.app.redirector
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.registry]
 rules = %(here)s/plone-rules/plone.app.registry.cfg
 svn-repo = plone
 svn-path = /plone.app.registry
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.search]
 rules = %(here)s/plone-rules/plone.app.search.cfg
 svn-repo = plone
 svn-path = /plone.app.search
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.testing]
 rules = %(here)s/plone-rules/plone.app.testing.cfg
@@ -496,7 +496,7 @@ rules = %(here)s/plone-rules/plone.app.uuid.cfg
 svn-repo = plone
 svn-path = /plone.app.uuid
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.app.viewletmanager]
 rules = %(here)s/plone-rules/plone.app.viewletmanager.cfg
@@ -524,14 +524,14 @@ rules = %(here)s/plone-rules/plone.app.z3cform.cfg
 svn-repo = plone
 svn-path = /plone.app.z3cform
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.autoform]
 rules = %(here)s/plone-rules/plone.autoform.cfg
 svn-repo = plone
 svn-path = /plone.autoform
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.browserlayer]
 rules = %(here)s/plone-rules/plone.browserlayer.cfg
@@ -545,14 +545,14 @@ rules = %(here)s/plone-rules/plone.cachepurging.cfg
 svn-repo = plone
 svn-path = /plone.cachepurging
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.caching]
 rules = %(here)s/plone-rules/plone.caching.cfg
 svn-repo = plone
 svn-path = /plone.caching
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.contentrules]
 rules = %(here)s/plone-rules/plone.contentrules.cfg
@@ -566,7 +566,7 @@ rules = %(here)s/plone-rules/plone.fieldsets.cfg
 svn-repo = plone
 svn-path = /plone.fieldsets
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.folder]
 rules = %(here)s/plone-rules/plone.folder.cfg
@@ -587,28 +587,28 @@ rules = %(here)s/plone-rules/plone.indexer.cfg
 svn-repo = plone
 svn-path = /plone.indexer
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.intelligenttext]
 rules = %(here)s/plone-rules/plone.intelligenttext.cfg
 svn-repo = plone
 svn-path = /plone.intelligenttext
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.keyring]
 rules = %(here)s/plone-rules/plone.keyring.cfg
 svn-repo = plone
 svn-path = /plone.keyring
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.locking]
 rules = %(here)s/plone-rules/plone.locking.cfg
 svn-repo = plone
 svn-path = /plone.locking
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.memoize]
 rules = %(here)s/plone-rules/plone.memoize.cfg
@@ -622,28 +622,28 @@ rules = %(here)s/plone-rules/plone.openid.cfg
 svn-repo = plone
 svn-path = /plone.openid
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.outputfilters]
 rules = %(here)s/plone-rules/plone.outputfilters.cfg
 svn-repo = plone
 svn-path = /plone.outputfilters
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.portlet.collection]
 rules = %(here)s/plone-rules/plone.portlet.collection.cfg
 svn-repo = plone
 svn-path = /plone.portlet.collection
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.portlet.static]
 rules = %(here)s/plone-rules/plone.portlet.static.cfg
 svn-repo = plone
 svn-path = /plone.portlet.static
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.portlets]
 rules = %(here)s/plone-rules/plone.portlets.cfg
@@ -657,42 +657,42 @@ rules = %(here)s/plone-rules/plone.protect.cfg
 svn-repo = plone
 svn-path = /plone.protect
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.registry]
 rules = %(here)s/plone-rules/plone.registry.cfg
 svn-repo = plone
 svn-path = /plone.registry
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.scale]
 rules = %(here)s/plone-rules/plone.scale.cfg
 svn-repo = plone
 svn-path = /plone.scale
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.session]
 rules = %(here)s/plone-rules/plone.session.cfg
 svn-repo = plone
 svn-path = /plone.session
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.stringinterp]
 rules = %(here)s/plone-rules/plone.stringinterp.cfg
 svn-repo = plone
 svn-path = /plone.stringinterp
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.supermodel]
 rules = %(here)s/plone-rules/plone.supermodel.cfg
 svn-repo = plone
 svn-path = /plone.supermodel
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plone.testing]
 rules = %(here)s/plone-rules/plone.testing.cfg
@@ -713,7 +713,7 @@ rules = %(here)s/plone-rules/plone.uuid.cfg
 svn-repo = plone
 svn-path = /plone.uuid
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
 
 [repo:plonetheme.classic]
 rules = %(here)s/plone-rules/plonetheme.classic.cfg
@@ -776,4 +776,4 @@ rules = %(here)s/plone-rules/plone.transformchain.cfg
 svn-repo = plone
 svn-path = /plone.transformchain
 git-org = plone
-status = REVIEW-NEEDED
+status = OK
