--- a/etc/plone-rules/Products.ResourceRegistries.cfg
+++ b/etc/plone-rules/Products.ResourceRegistries.cfg
@@ -2,19 +2,31 @@
 create repository Products.ResourceRegistries
 end repository
 
-match /(ResourceRegistries|Products.ResourceRegistries)/trunk/
+match /CSSRegistry/trunk/
+  repository Products.ResourceRegistries
+  branch master
+  max revision 6728
+end match
+
+match /ResourceRegistries/trunk/
   repository Products.ResourceRegistries
   branch master
 end match
 
-match /(ResourceRegistries|Products.ResourceRegistries)/branches/([^/]+)/
+match /CSSRegistry/branches/([^/]+)/
   repository Products.ResourceRegistries
-  branch \2
+  branch \1
+  max revision 6728
 end match
 
-match /(ResourceRegistries|Products.ResourceRegistries)/tags/([^/]+)/
+match /ResourceRegistries/branches/([^/]+)/
   repository Products.ResourceRegistries
-  branch refs/tags/\2
+  branch \1
+end match
+
+match /ResourceRegistries/tags/([^/]+)/
+  repository Products.ResourceRegistries
+  branch refs/tags/\1
 end match
 
 match /
