this was missing rule for deco

--- a/etc/deco-rules/plone.formwidget.querystring.cfg
+++ b/etc/deco-rules/plone.formwidget.querystring.cfg
@@ -2,7 +2,7 @@
 create repository plone.formwidget.querystring
 end repository
 
-match /plone.formwidget.querystring/trunk/
+match /(plone.formwidget.querysttring|plone.formwidget.querystring)/trunk/
   repository plone.formwidget.querystring
   branch master
 end match
