--- a/etc/plone-projects.cfg
+++ b/etc/plone-projects.cfg
@@ -750,12 +750,13 @@ svn-path = /Products.LinguaPlone
 git-org = plone
 status = REVIEW-NEEDED
 
-[repo:Products.ResourceRegistries]
-rules = %(here)s/plone-rules/Products.ResourceRegistries.cfg
-svn-repo = plone
-svn-path = /ResourceRegistries
-git-org = plone
-status = REVIEW-NEEDED
+# this was done as part of deco-projects
+#[repo:Products.ResourceRegistries]
+#rules = %(here)s/plone-rules/Products.ResourceRegistries.cfg
+#svn-repo = plone
+#svn-path = /ResourceRegistries
+#git-org = plone
+#status = OK
 
 [repo:Plone]
 rules = %(here)s/plone-rules/Plone.cfg
