--- a/etc/deco-projects.cfg
+++ b/etc/deco-projects.cfg
@@ -36,7 +36,8 @@ status = OK
 [repo:decobrewery.policy]
 rules = %(here)s/deco-rules/decobrewery.policy.cfg
 svn-repo = collective
-svn-path = /decobrewery.policy git-org = plone
+svn-path = /decobrewery.policy
+git-org = plone
 status = OK
 
 [repo:decobrewery.theme]
