was pointing to wrong rules file

--- a/etc/dexterity-projects.cfg
+++ b/etc/dexterity-projects.cfg
@@ -13,7 +13,7 @@ version_regex = ^(plone|v)?[\d._-]+(alpha|beta|branch|rc|RC|final|a|b|c|x)?(\d)*
 
 
 [repo:buildout.dexterity]
-rules = %(here)s/deco-rules/buildout.dexterity.cfg
+rules = %(here)s/dexterity-rules/buildout.dexterity.cfg
 svn-repo = plone
 svn-path = /plone.dexterity/buildouts/dev
 git-org = plone
