adding some new plone packages to github

--- a/etc/plone-rules/Products.LinguaPlone.cfg
+++ b/etc/plone-rules/Products.LinguaPlone.cfg
@@ -2,19 +2,19 @@
 create repository Products.LinguaPlone
 end repository
 
-match /(LinguaPlone|Products.LinguaPlone)/(trunk|trunk2)/
+match /Products.LinguaPlone/trunk/
   repository Products.LinguaPlone
   branch master
 end match
 
-match /(LinguaPlone|Products.LinguaPlone)/branches/([^/]+)/
+match /Product.LinguaPlone/branches/([^/]+)/
   repository Products.LinguaPlone
-  branch \2
+  branch \1
 end match
 
-match /(LinguaPlone|Products.LinguaPlone)/tags/([^/]+)/
+match /Products.LinguaPlone/tags/([^/]+)/
   repository Products.LinguaPlone
-  branch refs/tags/\2
+  branch refs/tags/\1
 end match
 
 match /
