--- a/etc/plone-rules/buildout.coredev.cfg
+++ b/etc/plone-rules/buildout.coredev.cfg
@@ -1,19 +1,19 @@
 
-create repository coredev
+create repository buildout.coredev
 end repository
 
 match /buildouts/plone-coredev/trunk/
-  repository coredev
+  repository buildout.coredev
   branch master
 end match
 
 match /buildouts/plone-coredev/branches/([^/]+)/
-  repository coredev
+  repository buildout.coredev
   branch \1
 end match
 
 match /buildouts/plone-coredev/tags/([^/]+)/
-  repository coredev
+  repository buildout.coredev
   branch refs/tags/\1
 end match
 
