--- a/etc/plone-rules/plone.folder.cfg
+++ b/etc/plone-rules/plone.folder.cfg
@@ -7,10 +7,10 @@ end repository
 #  branch master
 #end match
 
-match /review/plip191-unified-folders/
-  repository plone.folder
-  branch master
-end match
+#match /review/plip191-unified-folders/
+#  repository plone.folder
+#  branch master
+#end match
 
 match /plone.folder/trunk/
   repository plone.folder
