some update on the rules (after some time)

--- a/etc/plone-projects.cfg
+++ b/etc/plone-projects.cfg
@@ -12,73 +12,171 @@ git-cleaned-location = %(here)s/../var/repos/git-cleaned
 analyze-location = %(here)s/../var/repos/analyze
 version_regex = ^(plone|v)?[\d._-]+(alpha|beta|branch|rc|RC|final|a|b|c|x)?(\d)*$
 
+
+
+[repo:collective.xmltestreport]
+rules = %(here)s/plone-rules/collective.xmltestreport.cfg
+svn-repo = collective
+svn-path = /collective.xmltestreport
+git-org = collective
+status = WORKING ON IT (ROK)
+
+[repo:collective.fancyzoomview]
+rules = %(here)s/plone-rules/collective.fancyzoomview.cfg
+svn-repo = collective
+svn-path = /collective.fancyzoomview
+git-org = collective
+status = WORKING ON IT (ROK)
+
+[repo:collective.autoresizetextarea]
+rules = %(here)s/plone-rules/collective.autoresizetextarea.cfg
+svn-repo = collective
+svn-path = /collective.autoresizetextarea
+git-org = collective
+status = WORKING ON IT (ROK)
+
+[repo:collective.akismet]
+rules = %(here)s/plone-rules/collective.akismet.cfg
+svn-repo = collective
+svn-path = /collective.akismet
+git-org = collective
+status = WORKING ON IT (ROK)
+
+[repo:Products.CMFEditions]
+rules = %(here)s/plone-rules/Products.CMFEditions.cfg
+svn-repo = collective
+svn-path = /Products.CMFEditions
+git-org = plone
+status = WORKING ON IT (ROK)
+
+[repo:Products.CMFDiffTool]
+rules = %(here)s/plone-rules/Products.CMFDiffTool.cfg
+svn-repo = collective
+svn-path = /Products.CMFDiffTool
+git-org = plone
+status = WORKING ON IT (ROK)
+
+[repo:Products.CMFPlacefulWorkflow]
+rules = %(here)s/plone-rules/Products.CMFPlacefulWorkflow.cfg
+svn-repo = collective
+svn-path = /Products.CMFPlacefulWorkflow
+git-org = plone
+status = WORKING ON IT (ROK)
+
+[repo:Products.TinyMCE]
+rules = %(here)s/plone-rules/Products.TinyMCE.cfg
+svn-repo = collective
+svn-path = /Products.TinyMCE
+git-org = plone
+status = WORKING ON IT (ROK)
+
+[repo:Products.ATContentTypes]
+rules = %(here)s/plone-rules/Products.ATContentTypes.cfg
+svn-repo = collective
+svn-path = /Products.ATContentTypes
+git-org = plone
+status = WORKING ON IT (ROK)
+
+[repo:plone.formwidget.captcha]
+rules = %(here)s/plone-rules/plone.formwidget.captcha.cfg
+svn-repo = plone
+svn-path = /plone.formwidget.captcha
+git-org = plone
+status = WORKING ON IT (ROK)
+
+[repo:plone.formwidget.recaptcha]
+rules = %(here)s/plone-rules/plone.formwidget.recaptcha.cfg
+svn-repo = plone
+svn-path = /plone.formwidget.recaptcha
+git-org = plone
+status = WORKING ON IT (ROK)
+
+[repo:archetypes.querywidget]
+rules = %(here)s/plone-rules/archetypes.querywidget.cfg
+svn-repo = archetypes
+svn-path = /MoreFieldsAndWidgets/archetypes.querywidget/
+git-org = plone
+status = WORKING ON IT (ROK)
+
+
+
+
+
+
 #
 # ARCHETYPES
 #
 
-##[repo:archetypes.kss]
-##rules = %(here)s/plone-rules/archetypes.kss.cfg
-##svn-repo = archetypes
-##svn-path = /archetypes.kss
-##git-org = plone
-##status = OK
-##
-##[repo:archetypes.referencebrowserwidget]
-##rules = %(here)s/plone-rules/archetypes.referencebrowserwidget.cfg
-##svn-repo = archetypes
-##svn-path = /MoreFieldsAndWidgets/archetypes.referencebrowserwidget
-##git-org = plone
-##status = OK
-##
+#[repo:archetypes.kss]
+#rules = %(here)s/plone-rules/archetypes.kss.cfg
+#svn-repo = archetypes
+#svn-path = /archetypes.kss
+#git-org = plone
+#status = OK
+#
+#[repo:archetypes.referencebrowserwidget]
+#rules = %(here)s/plone-rules/archetypes.referencebrowserwidget.cfg
+#svn-repo = archetypes
+#svn-path = /MoreFieldsAndWidgets/archetypes.referencebrowserwidget
+#git-org = plone
+#status = OK
+#
 #[repo:archetypes.schemaextender]
 #rules = %(here)s/plone-rules/archetypes.schemaextender.cfg
 #svn-repo = archetypes
 #svn-path = /archetypes.schemaextender
 #git-org = plone
-#status = REVIEW-NEEDED
+#status = OK
 #
 #[repo:Products.Archetypes]
 #rules = %(here)s/plone-rules/Products.Archetypes.cfg
 #svn-repo = archetypes
 #svn-path = /Products.Archetypes
 #git-org = plone
-#status = REVIEW-NEEDED
-#
+#status = OK
+
 #[repo:Products.ATReferenceBrowserWidget]
 #rules = %(here)s/plone-rules/Products.ATReferenceBrowserWidget.cfg
 #svn-repo = archetypes
 #svn-path = /MoreFieldsAndWidgets/ATReferenceBrowserWidget
 #git-org = plone
-#status = REVIEW-NEEDED
-#
-##[repo:Products.Marshall]
-##rules = %(here)s/plone-rules/Products.Marshall.cfg
-##svn-repo = archetypes
-##svn-path = /Products.Marshall
-##git-org = plone
-##status = OK
-##
+#status = OK
+
+#[repo:Products.Marshall]
+#rules = %(here)s/plone-rules/Products.Marshall.cfg
+#svn-repo = archetypes
+#svn-path = /Products.Marshall
+#git-org = plone
+#status = OK
+
 #[repo:Products.MimetypesRegistry]
 #rules = %(here)s/plone-rules/Products.MimetypesRegistry.cfg
 #svn-repo = archetypes
 #svn-path = /Products.MimetypesRegistry
 #git-org = plone
 #status = REVIEW-NEEDED
-#
+
 #[repo:Products.PortalTransforms]
 #rules = %(here)s/plone-rules/Products.PortalTransforms.cfg
 #svn-repo = archetypes
 #svn-path = /Products.PortalTransforms
 #git-org = plone
-#status = REVIEW-NEEDED
-#
+#status = OK
+
 #[repo:Products.validation]
 #rules = %(here)s/plone-rules/Products.validation.cfg
 #svn-repo = archetypes
 #svn-path = /Products.validation
 #git-org = plone
-#status = REVIEW-NEEDED
-#
+#status = OK
+
+[repo:archetypes.querywidget]
+rules = %(here)s/plone-rules/archetypes.querywidget.cfg
+svn-repo = archetypes
+svn-path = /MoreFieldsAndWidgets/archetypes.querywidget
+git-org = plone
+status = OK
+
 ##
 ##
 ## COLLECTIVE
@@ -300,13 +398,13 @@ version_regex = ^(plone|v)?[\d._-]+(alpha|beta|branch|rc|RC|final|a|b|c|x)?(\d)*
 # PLONE
 #
 #
-[repo:buildout.coredev]
-rules = %(here)s/plone-rules/buildout.coredev.cfg
-svn-repo = plone
-svn-path = /buildouts/plone-coredev
-git-org = plone
-status = OK
-
+#[repo:buildout.coredev]
+#rules = %(here)s/plone-rules/buildout.coredev.cfg
+#svn-repo = plone
+#svn-path = /buildouts/plone-coredev
+#git-org = plone
+#status = OK
+#
 #[repo:plone.app.blob]
 #rules = %(here)s/plone-rules/plone.app.blob.cfg
 #svn-repo = plone
@@ -362,14 +460,6 @@ status = OK
 #svn-path = /plone.app.customerize
 #git-org = plone
 #status = OK
-#
-#[repo:plone.app.discussion]
-#rules = %(here)s/plone-rules/plone.app.discussion.cfg
-#svn-repo = plone
-#svn-path = /plone.app.discussion
-#git-org = plone
-#status = OK
-#
 #
 #
 ##[repo:plone.app.folder]
@@ -701,13 +791,6 @@ status = OK
 ##git-org = plone
 ##status = OK
 #
-#[repo:plone.theme]
-#rules = %(here)s/plone-rules/plone.theme.cfg
-#svn-repo = plone
-#svn-path = /plone.theme
-#git-org = plone
-#status = OK
-#
 ##[repo:plone.uuid]
 ##rules = %(here)s/plone-rules/plone.uuid.cfg
 ##svn-repo = plone
@@ -799,4 +882,73 @@ status = OK
 #svn-path = /plone.app.themingplugins
 #git-org = plone
 #status = OK
+
+#[repo:plone.theme]
+#rules = %(here)s/plone-rules/plone.theme.cfg
+#svn-repo = plone
+#svn-path = /plone.theme
+#git-org = plone
+#status = OK
+
+#[repo:plone.app.discussion]
+#rules = %(here)s/plone-rules/plone.app.discussion.cfg
+#svn-repo = plone
+#svn-path = /plone.app.discussion
+#git-org = plone
+#status = OK
 #
+#[repo:Products.PloneOrg]
+#rules = %(here)s/plone-rules/Products.PloneOrg.cfg
+#svn-repo = plone
+#svn-path = /plone.org/Products.PloneOrg
+#git-org = plone
+#status = OK
+#
+#[repo:ploneorg.admin]
+#rules = %(here)s/plone-rules/ploneorg.admin.cfg
+#svn-repo = plone
+#svn-path = /plone.org
+#git-org = plone
+#status = NEEDS-RULES
+#
+#[repo:plone.app.contentlisting]
+#rules = %(here)s/plone-rules/plone.app.contentlisting.cfg
+#svn-repo = plone
+#svn-path = /plone.app.contentlisting
+#git-org = plone
+#status = OK
+#
+#[repo:plone.app.referenceintegrity]
+#rules = %(here)s/plone-rules/plone.app.referenceintegrity.cfg
+#svn-repo = plone
+#svn-path = /plone.app.referenceintegrity
+#git-org = plone
+#status = OK
+#
+#[repo:plone.relations]
+#rules = %(here)s/plone-rules/plone.relations.cfg
+#svn-repo = plone
+#svn-path = /plone.relations
+#git-org = plone
+#status = OK
+#
+#[repo:plone.seleniumtesting]
+#rules = %(here)s/plone-rules/plone.seleniumtesting.cfg
+#svn-repo = plone
+#svn-path = /plone.seleniumtesting
+#git-org = plone
+#status = OK
+#
+#[repo:Products.MasterSelectWidget]
+#rules = %(here)s/plone-rules/Products.MasterSelectWidget.cfg
+#svn-repo = archetypes
+#svn-path = /MoreFieldsAndWidgets/Products.MasterSelectWidget
+#git-org = plone
+#status = OK
+#
+#[repo:Products.Relations]
+#rules = %(here)s/plone-rules/Products.Relations.cfg
+#svn-repo = archetypes
+#svn-path = /Products.Relations
+#git-org = plone
+#status = OK
