--- a/etc/plone-rules/Products.ATReferenceBrowserWidget.cfg
+++ b/etc/plone-rules/Products.ATReferenceBrowserWidget.cfg
@@ -2,22 +2,19 @@
 create repository Products.ATReferenceBrowserWidget
 end repository
 
-match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/(trunk|trunk-old)/
+match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/trunk/
   repository Products.ATReferenceBrowserWidget
   branch master
-  prefix Products/ATReferenceBrowserWidget/
 end match
 
 match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/branches/([^/]+)/
   repository Products.ATReferenceBrowserWidget
   branch \1
-  prefix Products/ATReferenceBrowserWidget/
 end match
 
 match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/tags/([^/]+)/
   repository Products.ATReferenceBrowserWidget
   branch refs/tags/\1
-  prefix Products/ATReferenceBrowserWidget/
 end match
 
 match /
