--- a/etc/plone-rules/Products.MimetypesRegistry.cfg
+++ b/etc/plone-rules/Products.MimetypesRegistry.cfg
@@ -2,13 +2,27 @@
 create repository Products.MimetypesRegistry
 end repository
 
-match /MimetypesRegistry/branches/historical/([^/]+)/
+match /MimetypesRegistry/branches/archetypes-1_3-branch/
+  repository Products.MimetypesRegistry
+  branch master
+  prefix /Products/MimetypesRegistry/
 end match
-
 match /MimetypesRegistry/trunk/
   repository Products.MimetypesRegistry
   branch master
-  prefix Products/MimetypesRegistry/
+  prefix /Products/MimetypesRegistry/
+end match
+
+match /MimetypesRegistry/branches/([^/]+)/
+  repository Products.MimetypesRegistry
+  branch \1
+  prefix /Products/MimetypesRegistry/
+end match
+
+match /MimetypesRegistry/tags/([^/]+)/
+  repository Products.MimetypesRegistry
+  branch refs/tags/\1
+  prefix /Products/MimetypesRegistry/
 end match
 
 match /Products.MimetypesRegistry/trunk/
@@ -16,21 +30,9 @@ match /Products.MimetypesRegistry/trunk/
   branch master
 end match
 
-match /MimetypesRegistry/branches/([^/]+)/
-  repository Products.MimetypesRegistry
-  branch \1
-  prefix Products/MimetypesRegistry/
-end match
-
 match /Products.MimetypesRegistry/branches/([^/]+)/
   repository Products.MimetypesRegistry
   branch \1
-end match
-
-match /MimetypesRegistry/tags/([^/]+)/
-  repository Products.MimetypesRegistry
-  branch refs/tags/\1
-  prefix Products/MimetypesRegistry/
 end match
 
 match /Products.MimetypesRegistry/tags/([^/]+)/
