some more migration

--- a/etc/plone-projects.cfg
+++ b/etc/plone-projects.cfg
@@ -1,8 +1,8 @@
 [base]
 authors-file = authors.cfg
 svn-repos =
-    archetypes http://svn.plone.org/svn/archetypes
-    collective http://svn.plone.org/svn/collective
+#    archetypes http://svn.plone.org/svn/archetypes
+#    collective http://svn.plone.org/svn/collective
     plone http://svn.plone.org/svn/plone
 
 svn-all-fast-export-tool = %(here)s/../src/svn2git/svn-all-fast-export
@@ -13,92 +13,142 @@ analyze-location = %(here)s/../var/repos/analyze
 version_regex = ^(plone|v)?[\d._-]+(alpha|beta|branch|rc|RC|final|a|b|c|x)?(\d)*$
 
 
-
-[repo:collective.xmltestreport]
-rules = %(here)s/plone-rules/collective.xmltestreport.cfg
-svn-repo = collective
-svn-path = /collective.xmltestreport
-git-org = collective
-status = WORKING ON IT (ROK)
-
-[repo:collective.fancyzoomview]
-rules = %(here)s/plone-rules/collective.fancyzoomview.cfg
-svn-repo = collective
-svn-path = /collective.fancyzoomview
-git-org = collective
-status = WORKING ON IT (ROK)
-
-[repo:collective.autoresizetextarea]
-rules = %(here)s/plone-rules/collective.autoresizetextarea.cfg
-svn-repo = collective
-svn-path = /collective.autoresizetextarea
-git-org = collective
-status = WORKING ON IT (ROK)
-
-[repo:collective.akismet]
-rules = %(here)s/plone-rules/collective.akismet.cfg
-svn-repo = collective
-svn-path = /collective.akismet
-git-org = collective
-status = WORKING ON IT (ROK)
-
-[repo:Products.CMFEditions]
-rules = %(here)s/plone-rules/Products.CMFEditions.cfg
-svn-repo = collective
-svn-path = /Products.CMFEditions
-git-org = plone
-status = WORKING ON IT (ROK)
-
-[repo:Products.CMFDiffTool]
-rules = %(here)s/plone-rules/Products.CMFDiffTool.cfg
-svn-repo = collective
-svn-path = /Products.CMFDiffTool
-git-org = plone
-status = WORKING ON IT (ROK)
-
-[repo:Products.CMFPlacefulWorkflow]
-rules = %(here)s/plone-rules/Products.CMFPlacefulWorkflow.cfg
-svn-repo = collective
-svn-path = /Products.CMFPlacefulWorkflow
-git-org = plone
-status = WORKING ON IT (ROK)
-
-[repo:Products.TinyMCE]
-rules = %(here)s/plone-rules/Products.TinyMCE.cfg
-svn-repo = collective
-svn-path = /Products.TinyMCE
-git-org = plone
-status = WORKING ON IT (ROK)
-
-[repo:Products.ATContentTypes]
-rules = %(here)s/plone-rules/Products.ATContentTypes.cfg
-svn-repo = collective
-svn-path = /Products.ATContentTypes
-git-org = plone
-status = WORKING ON IT (ROK)
-
-[repo:plone.formwidget.captcha]
-rules = %(here)s/plone-rules/plone.formwidget.captcha.cfg
-svn-repo = plone
-svn-path = /plone.formwidget.captcha
-git-org = plone
-status = WORKING ON IT (ROK)
-
-[repo:plone.formwidget.recaptcha]
-rules = %(here)s/plone-rules/plone.formwidget.recaptcha.cfg
-svn-repo = plone
-svn-path = /plone.formwidget.recaptcha
-git-org = plone
-status = WORKING ON IT (ROK)
-
-[repo:archetypes.querywidget]
-rules = %(here)s/plone-rules/archetypes.querywidget.cfg
-svn-repo = archetypes
-svn-path = /MoreFieldsAndWidgets/archetypes.querywidget/
-git-org = plone
-status = WORKING ON IT (ROK)
+collective/wicked
+collective/txtfilter
+Products.CMFDynamicViewFTI          = svn ${remotes:svn_collective}/CMFDynamicViewFTI/trunk
+Products.CMFFormController          = svn ${remotes:svn_collective}/CMFFormController/trunk
+Products.CMFPlacefulWorkflow        = svn ${remotes:svn_collective}/Products.CMFPlacefulWorkflow/trunk
+Products.CMFQuickInstallerTool      = svn ${remotes:svn_collective}/CMFQuickInstallerTool/trunk
+Products.CMFTestCase                = svn ${remotes:svn_collective}/Products.CMFTestCase/trunk
+Products.contentmigration           = svn ${remotes:svn_collective}/Products.contentmigration/trunk
+Products.GroupUserFolder            = svn ${remotes:svn_collective}/Products.GroupUserFolder/trunk
+Products.i18ntestcase               = svn ${remotes:svn_collective}/Products.i18ntestcase/trunk
+Products.PlacelessTranslationService= svn ${remotes:svn_collective}/PlacelessTranslationService/trunk
+Products.PloneLanguageTool          = svn ${remotes:svn_collective}/PloneLanguageTool/trunk
+Products.PloneTestCase              = svn ${remotes:svn_collective}/Products.PloneTestCase/trunk
+Products.SecureMailHost             = svn ${remotes:svn_collective}/SecureMailHost/branches/1.1
+Products.statusmessages             = svn ${remotes:svn_collective}/statusmessages/trunk
+drafts.cfg:plone.app.z3cformdrafts = svn https://svn.plone.org/svn/plone/plone.app.z3cformdrafts/trunk
+drafts.cfg:plone.z3cformbuttonoverrides = svn https://svn.plone.org/svn/plone/plone.z3cformbuttonoverrides/trunk
+drafts.cfg:dexterity.draftspreviewbehavior = svn https://svn.plone.org/svn/collective/dexterity.draftspreviewbehavior/trunk
 
 
+
+
+
+
+
+
+#[repo:Products.FoundationMember]
+#rules = %(here)s/plone-rules/Products.FoundationMember.cfg
+#svn-repo = plone
+#svn-path = /Products.FoundationMember
+#git-org = plone
+#status = OK
+#
+#[repo:plone.app.bbb_testing]
+#rules = %(here)s/plone-rules/plone.app.bbb_testing.cfg
+#svn-repo = plone
+#svn-path = /plone.app.bbb_testing
+#git-org = plone
+#status = OK
+#
+#[repo:plone.app.relations]
+#rules = %(here)s/plone-rules/plone.app.relations.cfg
+#svn-repo = plone
+#svn-path = /plone.app.relations
+#git-org = plone
+#status = OK
+#
+#[repo:plone.app.ldap]
+#rules = %(here)s/plone-rules/plone.app.ldap.cfg
+#svn-repo = plone
+#svn-path = /plone.app.ldap
+#git-org = plone
+#status = OK
+#
+#[repo:plone.mocktestcase]
+#rules = %(here)s/plone-rules/plone.mocktestcase.cfg
+#svn-repo = plone
+#svn-path = /plone.mocktestcase
+#git-org = plone
+#status = OK
+
+
+
+
+
+#
+#[repo:collective.xmltestreport]
+#rules = %(here)s/plone-rules/collective.xmltestreport.cfg
+#svn-repo = collective
+#svn-path = /collective.xmltestreport
+#git-org = collective
+#status = OK
+#
+#[repo:collective.fancyzoomview]
+#rules = %(here)s/plone-rules/collective.fancyzoomview.cfg
+#svn-repo = collective
+#svn-path = /collective.fancyzoomview
+#git-org = collective
+#status = OK
+#
+#[repo:collective.autoresizetextarea]
+#rules = %(here)s/plone-rules/collective.autoresizetextarea.cfg
+#svn-repo = collective
+#svn-path = /collective.autoresizetextarea
+#git-org = collective
+#status = OK
+#
+#[repo:collective.akismet]
+#rules = %(here)s/plone-rules/collective.akismet.cfg
+#svn-repo = collective
+#svn-path = /collective.akismet
+#git-org = collective
+#status = OK
+#
+#[repo:Products.CMFEditions]
+#rules = %(here)s/plone-rules/Products.CMFEditions.cfg
+#svn-repo = collective
+#svn-path = /Products.CMFEditions
+#git-org = plone
+#status = OK
+#
+#[repo:Products.CMFDiffTool]
+#rules = %(here)s/plone-rules/Products.CMFDiffTool.cfg
+#svn-repo = collective
+#svn-path = /Products.CMFDiffTool
+#git-org = plone
+#status = OK
+#
+#[repo:Products.CMFPlacefulWorkflow]
+#rules = %(here)s/plone-rules/Products.CMFPlacefulWorkflow.cfg
+#svn-repo = collective
+#svn-path = /Products.CMFPlacefulWorkflow
+#git-org = plone
+#status = OK
+#
+#[repo:Products.ATContentTypes]
+#rules = %(here)s/plone-rules/Products.ATContentTypes.cfg
+#svn-repo = collective
+#svn-path = /Products.ATContentTypes
+#git-org = plone
+#status = OK
+#
+#[repo:plone.formwidget.captcha]
+#rules = %(here)s/plone-rules/plone.formwidget.captcha.cfg
+#svn-repo = plone
+#svn-path = /plone.formwidget.captcha
+#git-org = plone
+#status = OK
+#
+#[repo:plone.formwidget.recaptcha]
+#rules = %(here)s/plone-rules/plone.formwidget.recaptcha.cfg
+#svn-repo = plone
+#svn-path = /plone.formwidget.recaptcha
+#git-org = plone
+#status = OK
+#
 
 
 
@@ -170,12 +220,12 @@ status = WORKING ON IT (ROK)
 #git-org = plone
 #status = OK
 
-[repo:archetypes.querywidget]
-rules = %(here)s/plone-rules/archetypes.querywidget.cfg
-svn-repo = archetypes
-svn-path = /MoreFieldsAndWidgets/archetypes.querywidget
-git-org = plone
-status = OK
+#[repo:archetypes.querywidget]
+#rules = %(here)s/plone-rules/archetypes.querywidget.cfg
+#svn-repo = archetypes
+#svn-path = /MoreFieldsAndWidgets/archetypes.querywidget
+#git-org = plone
+#status = OK
 
 ##
 ##
