--- a/etc/plone-rules/Products.TinyMCE.cfg
+++ b/etc/plone-rules/Products.TinyMCE.cfg
@@ -2,23 +2,23 @@
 create repository Products.TinyMCE
 end repository
 
-match /TinyMCE/trunk/
-  repository Products.TinyMCE
-  branch master
-  prefix Products/TinyMCE/
-end match
-
-match /TinyMCE/branches/([^/]+)/
-  repository Products.TinyMCE
-  branch \1
-  prefix Products/TinyMCE/
-end match
-
-match /TinyMCE/tags/([^/]+)/
-  repository Products.TinyMCE
-  branch refs/tags/\1
-  prefix Products/TinyMCE/
-end match
+#match /TinyMCE/trunk/
+#  repository Products.TinyMCE
+#  branch master
+#  prefix Products/TinyMCE/
+#end match
+#
+#match /TinyMCE/branches/([^/]+)/
+#  repository Products.TinyMCE
+#  branch \1
+#  prefix Products/TinyMCE/
+#end match
+#
+#match /TinyMCE/tags/([^/]+)/
+#  repository Products.TinyMCE
+#  branch refs/tags/\1
+#  prefix Products/TinyMCE/
+#end match
 
 match /Products.TinyMCE/trunk/
   repository Products.TinyMCE
